--- a/app/src/main/res/layout/activity_visit_npa_payment_mode.xml
+++ b/app/src/main/res/layout/activity_visit_npa_payment_mode.xml
@@ -205,8 +205,9 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_45sdp"
             android:backgroundTint="@color/green"
-            android:text="@string/send_link_for_online_payment_break"
+            android:text="@string/send_link_for_online_payment"
             android:textStyle="normal"
+            android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ivNotesIcon" />
@@ -219,7 +220,7 @@
             android:layout_height="@dimen/_45sdp"
             android:layout_marginTop="@dimen/_5sdp"
             android:backgroundTint="@color/blueButton"
-            android:text="@string/cash_space"
+            android:text="@string/cash_payment_space"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -232,7 +233,7 @@
             android:layout_height="@dimen/_45sdp"
             android:layout_marginTop="@dimen/_5sdp"
             android:backgroundTint="@color/brightOrange"
-            android:text="@string/cheque_space"
+            android:text="@string/cheque_payment_space"
             android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
