--- a/app/src/main/res/layout/activity_schedule_visit_for_collection.xml
+++ b/app/src/main/res/layout/activity_schedule_visit_for_collection.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         style="@style/MainConstraintStyle"
         android:layout_width="match_parent"
@@ -34,6 +33,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
+
+
+                    <ImageView
+                        android:id="@+id/ivBack"
+                        app:layout_constraintTop_toTopOf="@id/labelScheduleVisit"
+                        app:layout_constraintBottom_toBottomOf="@id/labelScheduleVisit"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginStart="@dimen/_10sdp"
+                        android:src="@drawable/back_arrow"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        app:tint="@color/textBlue" />
 
                     <TextView
                         android:id="@+id/labelScheduleVisit"
