--- a/app/src/main/res/layout/activity_near_by_customers.xml
+++ b/app/src/main/res/layout/activity_near_by_customers.xml
@@ -15,10 +15,10 @@
         app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
         android:textStyle="normal"
-        style="@style/BigButtonStyle"
+        style="@style/CustomButtonStyle"
         android:text="@string/view_nearby_customers"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="@dimen/_45sdp"/>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -246,12 +246,12 @@
         app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnVisitNearbyCustomers"
         android:layout_marginTop="@dimen/_50sdp"
-        style="@style/BigButtonStyle"
+        style="@style/CustomButtonStyle"
         android:textStyle="normal"
         android:backgroundTint="@color/green"
         android:text="@string/goto_dashboard"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="@dimen/_45sdp"/>
 
 
 
