--- a/app/src/main/res/layout/activity_visit_npa_reschedule.xml
+++ b/app/src/main/res/layout/activity_visit_npa_reschedule.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
 
     <data>
 
@@ -9,15 +9,15 @@
 
     </data>
 
-
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/MainConstraint"
         style="@style/MainConstraintStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/skyBlue"
-        tools:context=".fragments_activity.CustomerDetailsActivity">
+        tools:context=".fragment_visits_flow.Visit_NPA_RescheduledActivity">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -28,13 +28,12 @@
             app:layout_constraintTop_toTopOf="parent">
 
 
-            <!-- Visited Customer Details-->
             <TextView
                 android:id="@+id/txtToolbarHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/visit_npa_details"
+                android:text="@string/visit_npa_reschedule"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13ssp" />
 
@@ -51,6 +50,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/white" />
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clFirstHalf"
@@ -162,7 +162,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clSecondHalf"
             android:layout_width="match_parent"
@@ -199,31 +198,45 @@
 
 
             <Button
-                android:id="@+id/btnVisitedTheCustomer"
+                android:id="@+id/btnVisitRescheduled"
                 style="@style/CustomButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_45sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:backgroundTint="@color/green"
-                android:text="@string/visited_the_customer_space"
+                android:text="@string/visit_rescheduled_space"
                 android:textStyle="normal"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ivNotesIcon" />
 
 
             <Button
-                android:id="@+id/btnDidNotVisitTheCustomer"
+                android:id="@+id/btnPaymentAlreadyMade"
                 style="@style/CustomButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_45sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:backgroundTint="@color/red"
-                android:text="@string/not_visited_the_customer"
+                android:text="@string/payment_already_made"
                 android:textStyle="normal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btnVisitedTheCustomer" />
+                app:layout_constraintTop_toBottomOf="@id/btnVisitRescheduled" />
+
+            <Button
+                android:id="@+id/btnOthers"
+                style="@style/CustomButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_45sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:backgroundTint="@color/grey"
+                android:text="@string/others_space"
+                android:textStyle="normal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btnPaymentAlreadyMade" />
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
