--- a/app/src/main/res/layout/item_details_of_customer.xml
+++ b/app/src/main/res/layout/item_details_of_customer.xml
@@ -40,14 +40,15 @@
             android:layout_width="@dimen/_100sdp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_75sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_3sdp"
             android:digits="0123456789,."
             android:hint="@string/enter_amount"
             android:inputType="number"
             android:maxLength="10"
+            android:textAlignment="center"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@id/labelDetailName"
-            app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintEnd_toStartOf="@id/btnDetail"
             app:layout_constraintTop_toTopOf="@id/labelDetailName" />
 
 
