--- a/app/src/main/res/layout/activity_near_by_customers.xml
+++ b/app/src/main/res/layout/activity_near_by_customers.xml
@@ -106,7 +106,7 @@
             android:src="@drawable/location"
             app:layout_constraintEnd_toEndOf="@id/txtDPD"
             app:layout_constraintTop_toTopOf="@id/txtDistance"
-            app:tint="@color/red" />
+            app:tint="@color/chilliRed" />
 
 
         <TextView
