logout_icon in DashBoard/HomePage added

--- a/app/src/main/res/layout/activity_main_activity3_api.xml
+++ b/app/src/main/res/layout/activity_main_activity3_api.xml
@@ -34,6 +34,19 @@
 
         </androidx.appcompat.widget.Toolbar>
 
+        <ImageView
+            android:id="@+id/ivLogout"
+            android:layout_width="@dimen/_22sdp"
+            android:layout_height="@dimen/_22sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:src="@drawable/logout_icon"
+            app:layout_constraintBottom_toBottomOf="@id/toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/white" />
+
+
+
         <ScrollView
             android:id="@+id/dashboardScrollView"
             android:layout_width="match_parent"
