--- a/app/src/main/res/layout/activity_call_status.xml
+++ b/app/src/main/res/layout/activity_call_status.xml
@@ -8,36 +8,50 @@
         android:layout_height="match_parent"
         tools:context=".call_status.CallStatusActivity">
 
-        <!--  <androidx.appcompat.widget.Toolbar
-              android:id="@+id/toolbar"
-              style="@style/toolBarStyle"
-              android:background="@color/textBlue"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toTopOf="parent">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            style="@style/toolBarStyle"
+            android:background="@color/textBlue"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-              <TextView
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_gravity="center"
-                  android:text="@string/call_status"
-                  android:textAlignment="center"
-                  android:textColor="@color/white"
-                  android:textSize="@dimen/_12ssp"
-                  android:textStyle="bold" />
 
-          </androidx.appcompat.widget.Toolbar>
-  -->
+            <TextView
+                android:id="@+id/txtToolbarHeading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/call_status"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_13ssp" />
+
+
+        </androidx.appcompat.widget.Toolbar>
+
         <ImageView
             android:id="@+id/ivBack"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_10sdp"
             android:src="@drawable/back_arrow"
+            app:layout_constraintBottom_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/textBlue" />
+            app:tint="@color/white" />
+
+        <ImageView
+            android:id="@+id/ivHome"
+            android:layout_width="@dimen/_22sdp"
+            android:layout_height="@dimen/_22sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:src="@drawable/home_icon"
+            app:layout_constraintBottom_toBottomOf="@id/toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/white" />
+
+
 
         <ScrollView
             android:layout_width="match_parent"
@@ -45,7 +59,10 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
-            app:layout_constraintTop_toBottomOf="@id/ivBack">
+            android:fillViewport="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -109,6 +126,55 @@
                     app:layout_constraintTop_toTopOf="@id/labelMobileNumber"
                     tools:text="9876543210" />
 
+                <TextView
+                    android:id="@+id/txtLeadSource"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12ssp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/labelSourceOfLead"
+                    tools:text="Lead Source 1" />
+
+
+                <ImageView
+                    android:id="@+id/ivPreApprovedOffer"
+                    app:layout_constraintEnd_toStartOf="@id/labelPreApprovedOffer"
+                    app:layout_constraintTop_toTopOf="@id/labelPreApprovedOffer"
+                    app:layout_constraintBottom_toBottomOf="@id/labelPreApprovedOffer"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:src="@drawable/offers_icon"
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="@dimen/_20sdp"
+                    app:tint="@color/textBlue" />
+
+                 <TextView
+                     android:id="@+id/labelPreApprovedOffer"
+                     app:layout_constraintStart_toStartOf="parent"
+                     app:layout_constraintEnd_toEndOf="parent"
+                     app:layout_constraintTop_toBottomOf="@id/labelSourceOfLead"
+                     android:layout_marginTop="@dimen/_30sdp"
+                     android:text="@string/pre_approved_offer"
+                     android:textColor="@color/black"
+                     android:textStyle="normal"
+                     android:textSize="@dimen/_13ssp"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/labelNoPreApprovedOffer"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/labelPreApprovedOffer"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:text="@string/there_are_no_pre_approved_offers"
+                    android:textColor="@color/chilliRed"
+                    android:textStyle="normal"
+                    android:textSize="@dimen/_13ssp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
 
                 <ImageView
                     android:id="@+id/ivNotesIcon"
@@ -119,90 +185,116 @@
                     android:src="@drawable/icons8notepad65ver4"
                     android:visibility="visible"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/labelSourceOfLead" />
+                    app:layout_constraintTop_toBottomOf="@id/labelNoPreApprovedOffer" />
 
                 <ImageView
                     android:id="@+id/ivHistory"
                     android:layout_width="@dimen/_30sdp"
                     android:layout_height="@dimen/_30sdp"
                     android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_25sdp"
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:src="@drawable/history"
                     android:visibility="visible"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/labelSourceOfLead" />
+                   app:layout_constraintTop_toTopOf="@id/ivNotesIcon" />
 
-                  <!--Only for Test purpose-->
-                <ImageView
-                    android:id="@+id/ivWifiCall2"
-                    android:layout_width="@dimen/_80sdp"
-                    android:layout_height="@dimen/_100sdp"
-                    android:layout_marginTop="@dimen/_100sdp"
-                    android:src="@drawable/phonecall"
+                <TextView
+                    android:id="@+id/btnCreditCard"
+                     android:background="@drawable/round_corner_bg"
+                    android:layout_width="@dimen/_150sdp"
+                    android:layout_height="@dimen/_40sdp"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/borderColor"
+                    android:text="@string/credit_card"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/_11ssp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:textAllCaps="true"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/labelSourceOfLead" />
-
-
+                    app:layout_constraintTop_toBottomOf="@id/ivNotesIcon" />
 
                 <ImageView
-                    android:id="@+id/ivWifiCall"
-                    android:layout_width="@dimen/_80sdp"
-                    android:layout_height="@dimen/_100sdp"
-                    android:layout_marginTop="@dimen/_100sdp"
-                    android:src="@drawable/phonecall"
-                    android:visibility="gone"
+                    android:id="@+id/ivForwardArrowCreditCard"
+                    android:layout_width="@dimen/_15sdp"
+                    android:layout_height="@dimen/_15sdp"
+                    android:src="@drawable/forward_icon"
+                    app:layout_constraintTop_toTopOf="@id/btnCreditCard"
+                    app:layout_constraintBottom_toBottomOf="@id/btnCreditCard"
+                    app:layout_constraintEnd_toEndOf="@id/btnCreditCard"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    app:tint="@color/white" />
+
+                <TextView
+                    android:id="@+id/btnPersonalLoan"
+                    android:background="@drawable/round_corner_bg"
+                    android:layout_width="@dimen/_150sdp"
+                    android:layout_height="@dimen/_40sdp"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/borderColor"
+                    android:text="@string/personal_loan"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/_11ssp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:textAllCaps="true"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/labelSourceOfLead" />
+                    app:layout_constraintTop_toBottomOf="@id/btnCreditCard" />
 
+                <ImageView
+                    android:id="@+id/ivForwardArrowPersonalLoan"
+                    android:layout_width="@dimen/_15sdp"
+                    android:layout_height="@dimen/_15sdp"
+                    android:src="@drawable/forward_icon"
+                    app:layout_constraintTop_toTopOf="@id/btnPersonalLoan"
+                    app:layout_constraintBottom_toBottomOf="@id/btnPersonalLoan"
+                    app:layout_constraintEnd_toEndOf="@id/btnPersonalLoan"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    app:tint="@color/white" />
 
                 <TextView
                     android:id="@+id/txtSir_Madam"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
                     android:text="@string/sir_madam"
                     android:textSize="@dimen/_13ssp"
                     android:textStyle="bold|italic"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/ivWifiCall2" />
+                    app:layout_constraintTop_toBottomOf="@id/btnPersonalLoan" />
 
-              <!--  <Button
-                    android:id="@+id/btnSpokeToCustomer"
-                    style="@style/BigButtonStyle"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:backgroundTint="@color/textGreen"
-                    android:text="@string/spoke_to_customer"
-                    android:textStyle="bold"
-                    android:visibility="invisible"
+                <!--Only for Test purpose to move to next Activity without Call-->
+                <ImageView
+                    android:id="@+id/ivWifiCall2"
+                    android:layout_width="@dimen/_80sdp"
+                    android:layout_height="@dimen/_100sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:src="@drawable/phonecall"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/ivWifiCall" />
+                    app:layout_constraintTop_toBottomOf="@id/txtSir_Madam" />
 
-                <Button
-                    android:id="@+id/btnNotSpokeToCustomer"
-                    style="@style/BigButtonStyle"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:backgroundTint="@color/textRed"
-                    android:text="@string/did_not_speak_to_ncustomer"
-                    android:textStyle="bold"
-                    android:visibility="invisible"
+
+                  <!--To make Actual Call-->
+                <ImageView
+                    android:id="@+id/ivWifiCall"
+                    android:layout_width="@dimen/_80sdp"
+                    android:layout_height="@dimen/_100sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:src="@drawable/phonecall"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/btnSpokeToCustomer" />
--->
-                <Button
-                    android:id="@+id/btnBackToLeadList"
-                    style="@style/BigButtonStyle"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:text="@string/back_to_lead_list"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtSir_Madam" />
+                    app:layout_constraintTop_toBottomOf="@id/txtSir_Madam" />
+
+
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
