--- a/app/src/main/res/layout/activity_view_products.xml
+++ b/app/src/main/res/layout/activity_view_products.xml
@@ -9,35 +9,57 @@
     tools:context=".view_products.ViewProductsActivity">
 
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        style="@style/toolBarStyle"
+        android:background="@color/textBlue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <TextView
+            android:id="@+id/txtToolbarHeading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/products"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_13ssp" />
+
+
+    </androidx.appcompat.widget.Toolbar>
+
     <ImageView
         android:id="@+id/ivBack"
         android:layout_width="@dimen/_20sdp"
         android:layout_height="@dimen/_20sdp"
         android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_10sdp"
         android:src="@drawable/back_arrow"
+        app:layout_constraintBottom_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/textBlue" />
+        app:tint="@color/white" />
 
-    <TextView
-        android:id="@+id/txtWhichProducts"
-        app:layout_constraintStart_toStartOf="parent"
+    <ImageView
+        android:id="@+id/ivHome"
+        android:layout_width="@dimen/_22sdp"
+        android:layout_height="@dimen/_22sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:src="@drawable/home_icon"
+        app:layout_constraintBottom_toBottomOf="@id/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/which_products_are_you_interested_in"
-        android:textStyle="bold|italic"
-        android:textSize="@dimen/_13ssp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/_40sdp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:tint="@color/white" />
+
+
 
     <!--Add recyclerview here to get data from API-->
 
     <TextView
         android:id="@+id/txtHomeLoan"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtWhichProducts"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         android:layout_marginStart="@dimen/_30sdp"
         android:layout_marginTop="@dimen/_30sdp"
         android:text="Home Loan"
@@ -127,6 +149,19 @@
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_height="@dimen/_2sdp"/>
+
+    <Button
+        android:id="@+id/btnSkipAndProceed"
+        style="@style/CustomButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_45sdp"
+        android:backgroundTint="@color/green"
+        android:text="@string/skip_and_proceed"
+        android:textStyle="normal"
+        android:layout_marginTop="@dimen/_40sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtGoldLoan" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
